# rag-corpus-quality-assessement

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/corpus-quality-gate/: SKILL.md
.github/workflows/: ci.yml
config/: config.example.yaml  golden_qa_policy.md
scripts/: check_licenses.py
src/corpus_quality_gate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cqg/: cli.py  config.py  deterministic.py  golden_qa.py  inventory.py  judge.py  models.py  parse.py  redundancy.py  report.py  signals.py  triage.py
src/cqg/llm/: __init__.py  base.py  mock.py  providers.py
src/cqg/registry/: __init__.py  criteria_registry.yaml  loader.py
tests/: test_cli_e2e.py  test_config.py  test_deterministic.py  test_golden_qa.py  test_inventory.py  test_judge.py  test_licenses.py  test_llm.py  test_models.py  test_parse.py  test_redundancy.py  test_registry.py  test_report_export.py  test_report_scoring.py  test_signals.py  test_triage.py
