[project]
name = "corpus-quality-gate"
version = "0.1.0"
description = "Quality gate for document corpora before RAG ingestion (score-and-flag)."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "openpyxl>=3.1",
  "pypdf>=4.0",
  "docling>=2.0",
  "semhash>=0.3",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.34"]
dev = ["pytest>=8.0", "pip-licenses>=4.4", "reportlab>=4.0"]

[project.scripts]
cqg = "cqg.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
